--- a/css/style.css
+++ b/css/style.css
@@ -7,26 +7,26 @@ body {
 }
 
 header {
-    position: relative;
-    height: 100vh;
-    overflow: hidden;
-      margin-bottom: -250px;
+    position: relative !important;
+    height: 100vh !important;
+    overflow: hidden !important;
+      margin-bottom: -250px !important ;
 
 }
 
 .header1 {
-    position: relative;
-    height: 100vh;
-    overflow: hidden;
-    margin-bottom: -700px;
+    position: relative !important;
+    height: 100vh !important;
+    overflow: hidden !important;
+    margin-bottom: -700px !important;
 
 }
 
 .header2 {
-    position: relative;
-    height: 100vh;
-    overflow: hidden;
-    margin-bottom: -650px;
+    position: relative !important;
+    height: 100vh !important;
+    overflow: hidden !important;
+    margin-bottom: -650px !important;
 }
 
 nav {
@@ -63,59 +63,112 @@ nav a {
 
 
 .icons {
-    display: flex;
-    gap: 15px;
-    cursor: pointer;
+    display: flex !important;
+    gap: 15px !important;
+    cursor: pointer !important;
 }
 
+.search-icon {
+      position: fixed !important;
+      top: 20px !important;
+      right: 80px !important;
+      font-size: 15px !important;
+      cursor: pointer !important;
+      z-index: 1000 !important;
+      color: black !important;
+      background: white !important;
+      padding: 10px 14px !important;
+      border-radius: 50px !important;
+    }
+
+    .search-overlay {
+      position: fixed ;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 40vh;
+      background-color: white;
+      border: 1px solid black;
+      z-index: 999;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      transition: all 0.3s ease;
+    }
+
+    .search-overlay.hidden {
+      display: none;
+    }
+
+    .search-box {
+      display: flex;
+      gap: 10px;
+      align-items: center;
+      margin-bottom: 30px;
+      width: 50%;
+    }
+
+    .search-box input {
+      width: 700%;
+      padding: 12px 20px;
+      font-size: 16px;
+    }
+
+    .search-box button {
+      padding: 10px 16px;
+      font-size: 18px;
+    }
+
+
 .sidebar-menu {
-    position: fixed;
-    top: 0;
-    left: -120%;
-    width: 35%;
-    height: 100%;
-    background-color: white;
-    color: black;
-    z-index: 999;
-    transition: left 0.3s ease;
-    padding: 40px 20px;
-    box-shadow: 2px 0 10px rgba(0,0,0,0.1);
+    position: fixed !important;
+    top: 0 !important;
+    left: -120% !important;
+    width: 35% !important;
+    height: 100% !important;
+    background-color: white !important;
+    color: black !important;
+    z-index: 999 !important;
+    transition: left 0.3s ease !important;
+    padding: 40px 20px !important;
+    box-shadow: 2px 0 10px rgba(0,0,0,0.1) !important;
 }
 
 .sidebar-menu.active {
-    left: 0;
+    left: 0 !important;
 }
 
 .sidebar-menu .close-btn {
-    position: absolute;
-    top: 20px;
-    right: 20px;
-    font-size: 40px;
-    cursor: pointer;
+    position: absolute !important;
+    top: 20px !important;
+    right: 20px !important;
+    font-size: 40px !important;
+    cursor: pointer !important;
 }
 
 .sidebar-menu ul {
-    list-style: none;
-    padding: 60px 0 0 0;
+    list-style: none !important;
+    padding: 60px 0 0 0 !important;
 }
 
 .sidebar-menu ul li {
-    padding: 15px 0;
-    border-bottom: 1px solid #eee;
+    padding: 15px 0 !important;
+    border-bottom: 1px solid #eee !important;
 }
 
 .sidebar-menu ul li a {
-    text-decoration: none;
-    color: black;
-    font-weight: 600;
-    letter-spacing: 1px;
+    text-decoration: none !important;
+    color: black !important;
+    font-weight: 600 !important;
+    letter-spacing: 1px !important;
 }
 
 
 .menu-toggle {
-    font-size: 40px;
-    cursor: pointer;
-    margin-right: 20px; 
+    font-size: 40px !important;
+    cursor: pointer !important; 
+    margin-right: 20px !important; 
 }
 
 section {
@@ -124,13 +177,13 @@ section {
 }
 
 .rotate-logo {
-    font-size: 40px;
-    font-weight: bold;
-    color: white;
-    animation: rotate360 5s linear infinite;
-    cursor: pointer;
-    flex-grow: 1; 
-    text-align: center;
+    font-size: 40px !important;
+    font-weight: bold !important;
+    color: white !important;
+    animation: rotate360 5s linear infinite !important;
+    cursor: pointer !important;
+    flex-grow: 1 !important; 
+    text-align: center !important;
 }
 
 
@@ -242,7 +295,7 @@ section {
     padding: 50px;
 }
 
-..product-section h1, .product-section h2, .product-section h3 {
+.product-section h1, .product-section h2, .product-section h3 {
     margin: 10px 0; 
     color: black;
 }
@@ -253,6 +306,7 @@ section {
     gap: 20px;
     justify-content: center;
     margin-top: 0; 
+    cursor: pointer;
 }
 
 .product-card {
@@ -324,6 +378,39 @@ section {
 .view-all-btn:focus {
     outline: none; 
 }
+
+
+.modal-content {
+    text-align: center;
+    color: black;
+}
+
+.modal-body img {
+    max-width: 50%;
+    height: auto;
+    margin-bottom: 0px;
+}
+
+.modal-footer .btn {
+    margin: 0 10px;
+}
+
+.btn-darker {
+  background-color: black; 
+  color: white;
+  border: 1px solid black;
+}
+
+.btn-darker:hover {
+  background-color: white;
+  color: black;
+}
+
+.btn-white {
+    background-color: #333;
+    color: white;
+}
+
 
 
  .about-container {
@@ -520,19 +607,19 @@ input, textarea {
 }
 
 footer {
-    background-color: black;
-    color: white;
-    padding: 10px;
-    text-align: center;
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    gap: 4px;
+    background-color: black !important;
+    color: white !important;
+    padding: 10px !important;
+    text-align: center !important;
+    display: flex !important;
+    justify-content: space-evenly !important;
+    align-items: center !important;
+    gap: 4px !important;
 }
 
 footer i {
-    cursor: pointer;
-    font-size: 25px;
+    cursor: pointer !important;
+    font-size: 25px !important;
 }
 
 footer .f1 {
@@ -549,17 +636,17 @@ footer .f1 {
         @media (min-width: 230px) and (max-width:768px) {
 
             header{
-              margin-bottom: -530px;
+              margin-bottom: -530px !important;
 
             }
 
             .header1 {
-              margin-bottom: -500px;
+              margin-bottom: -500px !important;
 
             }
 
             .header2 {
-              margin-bottom: -700px;
+              margin-bottom: -700px !important;
 
             }
               .about-text h1 {
@@ -635,7 +722,7 @@ footer .f1 {
             }
 
             .header1 {
-              margin-bottom: -700px;
+              margin-bottom: -700px !important;
 
             }
 
@@ -700,20 +787,20 @@ footer .f1 {
           }
 
           .about-logo {
-            order: 2; 
-            text-align: center;
-            margin-top: 20px;
+            order: 2 !important; 
+            text-align: center !important;
+            margin-top: 20px !important;
           }
 
           .about-text {
-            order: 1;
+            order: 1 !important;
           }
         }
 
 
         @media (min-width: 1025px) {
             .menu-toggle {
-                display: none;
+                display: none !important;
             }
 
             
@@ -722,12 +809,12 @@ footer .f1 {
         @media (min-width:890px ) and (max-width: 1159px) {
 
         .products {
-                display: grid;
-                grid-template-columns: repeat(3, 1fr);
-                gap: 10px;
+                display: grid !important;
+                grid-template-columns: repeat(3, 1fr) !important;
+                gap: 10px !important;
         }
         .header1 {
-                margin-bottom: -700px;
+                margin-bottom: -700px !important;
 
              }
 
