--- a/css/style.css
+++ b/css/style.css
@@ -68,16 +68,16 @@ nav a {
     cursor: pointer !important;
 }
 
-    .cart-icon {
+.cart-icon {
       position: fixed;
       top: 20px;
       right: 20px;
       font-size: 24px;
       cursor: pointer;
       z-index: 1001;
-    }
+}
 
-    .cart-icon .count {
+.cart-icon .count {
       position: absolute;
       top: -8px;
       right: -10px;
@@ -89,11 +89,11 @@ nav a {
       font-size: 12px;
       text-align: center;
       line-height: 18px;
-    }
+}
 
-   #cartSidebar {
+#cartSidebar {
     visibility: hidden;
-   }
+}
 
 #cartSidebar {
     position: fixed;
@@ -128,6 +128,7 @@ nav a {
     height: 80px;
     object-fit: cover;
     margin-right: 20px;
+    z-index: 3;
 }
 
 .cart-item-info {
@@ -169,9 +170,9 @@ nav a {
       background: white ;
       padding: 10px 14px ;
       border-radius: 50px ;
-    }
+}
 
-    .search-overlay {
+.search-overlay {
       position: fixed ;
       top: 0;
       left: 0;
@@ -185,30 +186,31 @@ nav a {
       justify-content: center;
       align-items: center;
       transition: all 0.3s ease;
-    }
+}
 
-    .search-overlay.hidden {
+.search-overlay.hidden {
       display: none;
-    }
+}
 
-    .search-box {
+.search-box {
       display: flex;
       gap: 10px;
       align-items: center;
       margin-bottom: 30px;
       width: 50%;
-    }
+}
 
-    .search-box input {
+.search-box input {
       width: 700%;
       padding: 12px 20px;
       font-size: 16px;
-    }
+      z-index: 3;
+}
 
-    .search-box button {
+.search-box button {
       padding: 10px 16px;
       font-size: 18px;
-    }
+}
 
 
 .sidebar-menu {
@@ -581,8 +583,6 @@ section {
     color: #555 ;
     line-height: 1.5 ;
 }
-
-
 .contact-section {
     max-width: 1100px !important;
     margin: 50px auto !important;
@@ -721,9 +721,9 @@ footer .f1 {
 
 
 
-    /*Responsive*/
+/*Responsive*/
 
-        @media (min-width: 230px) and (max-width:768px) {
+    @media (min-width: 230px) and (max-width:768px) {
 
             header{
               margin-bottom: -460px !important;
@@ -793,22 +793,31 @@ footer .f1 {
                 justify-content: space-around !important;
               }
 
-            .brand-logos li {
-                flex: 1 1 120px;
-                height: 70px;
-                padding: 15px;
-            }
+                .brand-logos li {
+                    flex: 1 1 120px;
+                    height: 70px;
+                    padding: 15px;
+                }
 
-            .brand-logos img {
-                 max-height: 60px;
+                .brand-logos img {
+                     max-height: 60px;
+                }
+                
             }
-            
-        }
 
         @media (max-width: 768px) {
 
             .menu-toggle {
                 display: flex;
+            }
+
+            .search-bar input {
+                width: 100%;
+                margin-bottom: 10px;
+            }
+
+            .cart-icon {
+                margin-top: 10px;
             }
 
             .header1 {
