--- a/css/style.css
+++ b/css/style.css
@@ -718,7 +718,10 @@ footer .f1 {
     font-size: 65px;
 }
 
-
+.hr {
+    border-bottom: 1px solid black; 
+    width: 76%;
+}
 
 
 /*Responsive*/
@@ -802,6 +805,11 @@ footer .f1 {
                 .brand-logos img {
                      max-height: 60px;
                 }
+
+                .hr {
+                    border-bottom: 1px solid black; 
+                    width: 76%;
+                }
                 
             }
 
@@ -849,7 +857,7 @@ footer .f1 {
               }
 
               .about-text p {
-                font-size: 16px;
+                font-size: 14px;
               }
 
               .brand-logos {
@@ -864,6 +872,11 @@ footer .f1 {
 
             .brand-logos img {
                  max-height: 30px;
+            }
+
+            .hr {
+                border-bottom: 1px solid black; 
+                width: 76%;
             }
 
         }
