--- a/css/style.css
+++ b/css/style.css
@@ -271,13 +271,13 @@ section {
 }
 
 .rotate-logo {
-    font-size: 40px !important;
-    font-weight: bold !important;
-    color: white !important;
-    animation: rotate360 5s linear infinite !important;
-    cursor: pointer !important;
-    flex-grow: 1 !important; 
-    text-align: center !important;
+    font-size: 40px ;
+    font-weight: bold ;
+    color: white ;
+    animation: rotate360 5s linear infinite ;
+    cursor: pointer ;
+    flex-grow: 1 ; 
+    text-align: center ;
 }
 
 
